[package]
name = "sploosh-wasm"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>", "Peter Schmidt-Nielsen <schmidtnielsenpeter@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
array-init = "0.1.1"
wasm-bindgen = "0.2.60"
once_cell = "1.3.1"
wee_alloc = "0.4.5"
